--- a/tier5.html
+++ b/tier5.html
@@ -421,8 +421,8 @@
 
   <div><p class="statement statmentOrange">Survey resulted in 4 key insights</p></div>
 
-<div class="researchCirTri">
-    <div class="researchCircles">
+<div class="researchCirTri row">
+    <div class="researchCircles col-xs-12 col-md-6">
       <!-- <p class="circleP1 researchP">Researching our user&#39;s daily lead requirement gave us this insight:</p> -->
       <p class="titleP">Most salespeople are one of two main types:</p>
       <p class="heavyText">High Touch, Low Volume &nbsp;&nbsp;&nbsp;&nbsp; Low Touch, High Volume</p>
@@ -430,18 +430,23 @@
       <img class="circles3" alt="3 Circles" src="myimages/tier5/research/circles3.png">
     </div>
 
-  <div class="researchTriangles">
+  <div class="researchTriangles col-xs-12 col-md-6">
 <!-- THIS IS THE TESTER TRIANGLE -->
-  <div class="triangleSection">
-    <p class= "triangleText titleP">Waste of time &amp money</p>
-    <img class="triangle" alt="Triangle charts" src="myimages/tier5/research/triangle62.png">
+  <div class="triangleSection row">
+    <div class="triangleText col-xs-9">
+      <p class= "triangleText titleP">Waste of time &amp money</p>
+      <p class="heavyText">62% of individuals use two or more platforms to find leads</p>
+    </div>
+    <div class="triangle col-xs-3">
+      <img class="triangleImg" alt="Triangle charts" src="myimages/tier5/research/triangle62.png">
+    </div>
     <!-- <div class = "triangleText"> -->
-    <p class="heavyText">62% of individuals use two or more platforms to find leads</p>
+
   </div>
   <!-- </div> -->
 
   <div class="triangleSection">
-    <img class="triangle"alt="Triangle charts" src="myimages/tier5/research/triangle76.png">
+    <img class="triangleImg"alt="Triangle charts" src="myimages/tier5/research/triangle76.png">
     <div class = "triangleText">
       <p class="titleP">Need information to &#34;nuture&#34; leads</p>
       <p class="heavyText">76% of individuals thought it would be useful to have a newsfeed to improve the &#34;nurturing&#34; of a lead in order to close and up-sell</p>
@@ -449,7 +454,7 @@
     </div>
   </div>
     <div class="triangleSection">
-      <img class="triangle" alt="Triangle charts" src="myimages/tier5/research/triangle95.png">
+      <img class="triangleImg" alt="Triangle charts" src="myimages/tier5/research/triangle95.png">
       <div class = "triangleText">
       <p class="titleP">Willingness to help imporve the algorithm</p>
       <p class="heavyText">95% of individuals were willing to give some feedback to improve the accuracy of Tier5&#39;s contact information</p>
