--- a/tier5.html
+++ b/tier5.html
@@ -313,7 +313,7 @@
 
       <div><p class="statement">Opportunities to improve on the competition.</p></div>
       <div class="features">
-      <img class="featureCompetition" alt="feature Prioritization Chart" src="myimages/tier5/strategy/feature-competition.png">
+      <img class="featureCompImg" alt="feature Prioritization Chart" src="myimages/tier5/strategy/feature-competition.png">
       </div>
 
       <div><p class="statement">Recommendations</p></div>
@@ -339,7 +339,7 @@
         <div class="pieIntro75 pieIntroSec">
           <p class="pieIntroTitle octoOrange"> Our Strategic Recommendation</p>
           <p class="pieIntroSubTitle">Address High Touch, Low Volume</p>
-          <p class="pieText">Add "Nuturing Capabilities" & Individual Search</p>
+          <p class="pieText">Add "Nuturing Capabilities" &amp Individual Search</p>
           <p class="pieText">75% of salespeople</p>
         </div>
         <div class="pieIntro100 pieIntroSec">
@@ -430,10 +430,10 @@
       <img class="circles3" alt="3 Circles" src="myimages/tier5/research/circles3.png">
     </div>
 
-  <div class="researchTriangles col-xs-12 col-md-6">
+  <div class="researchTriangles col-xs-12 col-md-6 col-xs-offset-1 col-md-offset-0">
 <!-- THIS IS THE TESTER TRIANGLE -->
   <div class="triangleSection row">
-    <div class="triangleText col-xs-9">
+    <div class="triangleText col-xs-9 ">
       <p class= "triangleText titleP">Waste of time &amp money</p>
       <p class="heavyText">62% of individuals use two or more platforms to find leads</p>
     </div>
@@ -729,14 +729,14 @@
 
     <div class="statement octoOrange">The problem: redefined</div>
 <div class="problem">
-  <p class="problemTitle">
+  <p class="problemTitle octoOrange">
     We found that the saleperson&#39;s problem is two fold:
   </p>
     <p> 1 Quickly finding targeted leads with correct contact details</p>
     <p> 2 Difficult to find new and information to help nurture prospects</p>
 </div>
 
-<p class="alignGoalsTitle">We Considered both User &amp Business Goals
+<p class="alignGoalsTitle OctoGreen">We Considered both User &amp Business Goals
 </p>
 <div class="alignCircles">
 
