Added blank place hold pages for my unfinished project pages

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 <li class="liInline"><img id="iconBunny" class ="icon" alt="World icon" src="myimages/home/web-logo-dark.png"></li>
               </ul>
               <p class="projectDes darkText" style="text-align:left">Created, designed, &amp; coded this site to help people to learn how to use emojis as my final project in my front end web development course.</p>
-              <button class="darkButton backButton" type="button"><a href="emoji-libs.html">see more</a></button>
+              <button class="darkButton backButton" type="button"><a href="emoji-libs-port.html">see more</a></button>
             </div>
           </div>
         </div>
