--- a/tier5.html
+++ b/tier5.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,400italic' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Lora:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 
         <!-- BOOTSTRAP-Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -13,6 +13,7 @@
     <link  rel="stylesheet" href="all-files.css" media="screen" charset="utf-8">
     <link  rel="stylesheet" href="nav.css" media="screen" charset="utf-8">
     <link  rel="stylesheet" href="footer.css" media="screen" charset="utf-8">
+    <link  rel="stylesheet" href="project.css" media="screen" charset="utf-8">
     <link  rel="stylesheet" href="tier5.css" media="screen" charset="utf-8">
 
   </head>
@@ -425,14 +426,25 @@
     <div class="researchCircles col-xs-12 col-md-6">
       <!-- <p class="circleP1 researchP">Researching our user&#39;s daily lead requirement gave us this insight:</p> -->
       <p class="titleP">Most salespeople are one of two main types:</p>
-      <p class="heavyText">High Touch, Low Volume &nbsp;&nbsp;&nbsp;&nbsp; Low Touch, High Volume</p>
+      <p>High Touch, Low Volume &nbsp;&nbsp;&nbsp;&nbsp; Low Touch, High Volume</p>
       <!-- <p class="researchP">Low Touch, High Volume</p> -->
       <img class="circles3" alt="3 Circles" src="myimages/tier5/research/circles3.png">
     </div>
 
-  <div class="researchTriangles col-xs-12 col-md-6 col-xs-offset-1 col-md-offset-0">
+<div class="researchTriangles col-xs-12 col-md-6">
+      <div class="triangleSectionDivs">
+            <img class="triangleTextImg"alt="Triangle" src="myimages/tier5/research/two-triangles.png">
+      </div>
+</div>
+
+<!-- <div class="triangleSectionDivs">
+
+      <p class="TitleP">Waste of Time &amp Money</p>
+      <img alt="Triangle" src="myimages/tier5/research/research-triangle.png">
+</div> -->
+
 <!-- THIS IS THE TESTER TRIANGLE -->
-  <div class="triangleSection row">
+  <!-- <div class="triangleSection row">
     <div class="triangleText col-xs-9 ">
       <p class= "triangleText titleP">Waste of time &amp money</p>
       <p class="heavyText">62% of individuals use two or more platforms to find leads</p>
@@ -440,25 +452,25 @@
     <div class="triangle col-xs-3">
       <img class="triangleImg" alt="Triangle charts" src="myimages/tier5/research/triangle62.png">
     </div>
-    <!-- <div class = "triangleText"> -->
+    <div class = "triangleText"> -->
 
-  </div>
+  <!-- </div> -->
   <!-- </div> -->
 
-  <div class="triangleSection">
+  <!-- <div class="triangleSection">
     <img class="triangleImg"alt="Triangle charts" src="myimages/tier5/research/triangle76.png">
     <div class = "triangleText">
       <p class="titleP">Need information to &#34;nuture&#34; leads</p>
       <p class="heavyText">76% of individuals thought it would be useful to have a newsfeed to improve the &#34;nurturing&#34; of a lead in order to close and up-sell</p>
 
     </div>
-  </div>
-    <div class="triangleSection">
+  </div> -->
+    <!-- <div class="triangleSection">
       <img class="triangleImg" alt="Triangle charts" src="myimages/tier5/research/triangle95.png">
       <div class = "triangleText">
       <p class="titleP">Willingness to help imporve the algorithm</p>
       <p class="heavyText">95% of individuals were willing to give some feedback to improve the accuracy of Tier5&#39;s contact information</p>
-    </div>
+    </div> -->
   </div>
 </div>
 </div>
@@ -559,7 +571,7 @@
     <div class="findingsCircle1"></div>
 
     <div class="findingsText">
-      <p><b>Validated our strategic recommendation to add &#34;nurturing&#34; capabilities</b> to Tier5&#39;s design, something high in demand for both key types of salespeople.</p>
+      <p class="heavyText"><span class= "bold700">Validated our strategic recommendation to add &#34;nurturing&#34; capabilities</span> to Tier5&#39;s design, something high in demand for both key types of salespeople.</p>
     </div>
 </div>
 
@@ -567,23 +579,23 @@
     <div class="findingsCircle"></div>
 
     <div class="findingsText">
-      <p><strong>There are two very distinct types of salespeople with different requirements</strong>: targeted bulk leads or targeted individual search.</p>
+      <p class="heavyText"><span class= "bold700">There are two very distinct types of salespeople with different requirements</span>: targeted bulk leads or targeted individual search.</p>
     </div>
 </div>
+
+<!-- <div class="findings">
+    <div class="findingsCircle"></div>
+
+    <div class="findingsText">
+      <p class="heavyText"><span class= "bold700">Users are willing to give feedback</span> to improve Tier5&#39;s algorithm. This also has business implications as users may trial the product longer to see verify if data improves.</p>
+    </div>
+</div> -->
 
 <div class="findings">
     <div class="findingsCircle"></div>
 
     <div class="findingsText">
-      <p><b>Users are willing to give feedback</b> to improve Tier5&#39;s algorithm. This also has business implications as users may trial the product longer to see verify if data improves.</p>
-    </div>
-</div>
-
-<div class="findings">
-    <div class="findingsCircle"></div>
-
-    <div class="findingsText">
-      <p>Harnassing <b>social media and Klout scores are integral for users</b> to better connect with growing millennial market.</p>
+      <p class="heavyText">Harnassing <span class= "bold700">social media and Klout scores are integral for users</span> to better connect with growing millennial market.</p>
     </div>
 
 </div>
@@ -668,7 +680,7 @@
       <div class="squaresTop row">
       <img class="brad" alt="Picture of a Man" src="myimages/tier5/synthesis/brad.png">
       <div class="textBoxName textBoxNameBrad">
-        <p class="SalesmanName"></p>
+        <p class="SalesmanName">Brad</p>
         <p>Age: 52</p>
         <p>Location: San Francisco, CA</p>
         <p>Marital Status: Married</p>
@@ -780,12 +792,12 @@
 
 
   <div class="statement featureMargins">Initial Concept &amp Features</div>
-<div class="features">
-  <div class="realTimeAndNur2 realTime">
+<div class="features row">
+  <div class="realTimeAndNur2 col-xs-offset-1 col-xs-11 col-sm-offset-1 col-sm-5">
         <p class="experienceTitle">Real-Time Connections</p>
         <div class="iconSentence">
           <img class="featureIcon" alt="Funnel Icon" src="myimages/tier5/design/funnel-icon.png">
-          <p class="experienceSentence2">Smart, quick, easy-to-use filters to target leads</p>
+          <p class="experienceSentence2">Quick, easy-to-use filters to target leads</p>
         </div>
         <div class="iconSentence">
           <img class="featureIcon" alt="Sort Icon" src="myimages/tier5/design/sort-icon.png">
@@ -801,12 +813,11 @@
         </div>
         <div class="iconSentence">
           <img class="featureIcon flagIcon" alt="Flag Icon" src="myimages/tier5/design/flag-icon.png">
-          <p class="experienceSentence2">Leave feedback to improve your lead quality</p>
+          <p class="experienceSentence2">Leave feedback to improve lead quality</p>
         </div>
       </div>
 
-
-  <div class="realTimeAndNur2">
+  <div class="realTimeAndNur2 col-xs-12 col-sm-6">
       <div class="nurtureValign">
           <p class="experienceTitle">Nurturing Connections</p>
           <div class="iconInline">
