--- a/about.html
+++ b/about.html
@@ -36,8 +36,8 @@
                 <!-- <a class="navbar-brand" href="#">Responsive navbar</a> -->
                 <ul id="navUl" class="nav-inline nav navbar-nav">
                   <!-- <div class="row"> -->
-                  <li class="homeBarli nav-item" id= "homeHome"><a href="index.html">Home</a></li>
-                  <li class="homeBarli nav-item" id= "resumeHome"><a href="emoji-nav-about.html">Resume</a></li>
+                  <li class="homeBarli nav-item" id= "homeHome"><a href="index.html">Portfolio</a></li>
+                  <li class="homeBarli nav-item" id= "resumeHome"><a href="https://www.linkedin.com/in/jessica-davies-cfa-46009b13">Resume</a></li>
                   <li class="homeBarli nav-item" id= "aboutHome"><a href="about.html">About</a></li>
                   <!-- </div> -->
                 </ul>
@@ -45,7 +45,7 @@
           </nav>
             <div class="clearFix"></div>
         </header>
-        <img id="jdLogo" alt="Designers Logo" src="myimages/home/jd-logo.png">
+          <a href="index.html"><img id="jdLogo" alt="Designers Logo" src="myimages/home/jd-logo.png"></a>
             <!-- <a href="index.html"><img id="jdLogo" alt="Designers Logo" src="myimages/home/jd-logo.png"><a/> -->
       </div>
 
@@ -77,11 +77,11 @@
           <li class="deetsLi"><img class="deetsImg" alt="Phone Emoji" src="myimages/about/phone-icon.png"></li>
           <li class="deetsLi"><a href="tel:+19259688212">(925) 968-8212</a></li>
           <li class="deetsLi"><img class="deetsImg" alt="World Emoji" src="myimages/about/world.png"></li>
-          <li class="deetsLi"><a id="websiteLink" href="http://thejessicadavies.com">thejessicdavies.com</a></li>
+          <li class="deetsLi"><a href="https://jcdaviesauthor.github.io/portfolio/index.html">thejessicadavies.com</a></li>
           <li class="deetsLi"><img class="deetsImg" alt="Email Emoji" src="myimages/about/email-emoji.png"></li>
-          <li class="deetsLi"><a id="gmail" href="mailto:thejessicadavies@gmail.com?subject=Jessica's Portfolio&body=Hi Jessica Loved you Portfolio">thejessicadavies@gmail.com</a></li>
+          <li class="deetsLi"><a id="gmail" href="mailto:thejessicadavies@gmail.com?subject=Portfolio: Jessica Davies &body=Hi Jessica loved your Portfolio!">thejessicadavies@gmail.com</a></li>
           <li class="deetsLi"><img class="deetsImg" alt="GutHub Octocat" src="myimages/about/github.png"></li>
-          <li class="deetsLi"><a id="gitHubLink" href="https://github.com/jcdaviesauthor/FEWD37/tree/gh-pages">GitHub</a></li>
+          <li class="deetsLi"><a id="gitHubLink" href="https://github.com/jcdaviesauthor">GitHub</a></li>
         </ul>
       </div>
     </div>
@@ -97,9 +97,9 @@
             <div class="col-xs-12 col-sm-5 col-md-6">
               <!-- class="footerDivs"> -->
               <!-- class="col-xs-12 col-sm-5 col-md-6" -->
-            <a href="mailto:thejessicadavies@gmail.com?subject=Jessica's Portfolio&body=Hi Jessica Loved you Portfolio">thejessicadavies@gmail.com</a>
+            <a href="mailto:thejessicadavies@gmail.com?subject=Portfolio: Jessica Davies &body=Hi Jessica loved your Portfolio!">thejessicadavies@gmail.com</a>
             <a class="footerLogos" href="https://www.linkedin.com/in/jessica-davies-cfa-46009b13"><img class="footerLogos" alt="Linked in Logo" src="myimages/home/linked-in.png"></a>
-            <a class="footerLogos" href="https://github.com/jcdaviesauthor/FEWD37/tree/gh-pages"><img class="footerLogos" alt="Git Hub Logo" src="myimages/home/git.png"></a>
+            <a class="footerLogos" href="https://github.com/jcdaviesauthor"><img class="footerLogos" alt="Git Hub Logo" src="myimages/home/git.png"></a>
             </div>
 
             <div class="col-xs-12 col-sm-offset-1 col-sm-6 col-md-offset-1 col-md-5 liRight">
