Finalizing changes to home page and checking for responsive web
Had to change code for firefox because it would not except and anchor
in a button.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
     <!-- NOT WORKING -->
-    <meta property="og:image" content= "myimages/home/design-port.png"/>
+    <!-- <meta property="og:image" content= "myimages/home/design-port.png"/> -->
     <!-- ="myimages/home/design-port.png"> -->
   </head>
 <body>
@@ -38,11 +38,13 @@
             </div>
 
           <!-- <nav id = "navHome" class="navbar navbar-light bg-faded"> -->
+
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <!-- <a class="navbar-brand" href="#">Responsive navbar</a> -->
               <ul id="navUl" class="nav-inline nav navbar-nav">
                 <!-- <div class="row"> -->
-                <li class="homeBarli nav-item" id= "resumeHome"><a href="emoji-nav-about.html">Resume</a></li>
+                <li class="homeBarli nav-item" id= "resumeHome"><a href="https://www.linkedin.com/in/jessica-davies-cfa-46009b13">Resume</a></li>
+
                 <li class="homeBarli nav-item" id= "aboutHome"><a href="about.html">About</a></li>
                 <!-- </div> -->
               </ul>
@@ -51,7 +53,7 @@
           <div class="clearFix"></div>
       </header>
       <!-- <a href="index.html"><img id="jdLogo" alt="Designers Logo" src="myimages/home/jd-logo.png"><a/> -->
-      <img id="jdLogo" alt="Designers Logo" src="myimages/home/jd-logo.png">
+      <a href="index.html"><img id="jdLogo" alt="Designers Logo" src="myimages/home/jd-logo.png"></a>
     </div>
 
     <div id="content">
@@ -82,11 +84,12 @@
                 <div class="projectBack"style="text-align:left">
                   <ul class="titleDown">
                     <li class="liInline companyTitle darkText">Tier 5</li>
-                    <li class="liInline"><img id="iconTier"class ="icon" alt="Picture of World" src="myimages/home/web-logo-dark.png"></li>
+                      <!-- WILL NEED TO ADD THI BACK -->
+                    <!-- <li class="liInline"><img id="iconTier"class ="icon" alt="Picture of World" src="myimages/home/web-logo-dark.png"></li> -->
 
                   </ul>
-                  <p class="projectDes darkText" style="text-align:left">Re-designed all aspects of start-up's outbound web-based sales platform. Design now suitable for all types of salespeople, increased market opporunity by 3x.</p>
-                  <button class="darkButton backButton" type="button"><a href="tier5.html">see more</a></button>
+                  <p class="projectDes darkText" style="text-align:left">Re-designed all aspects of start-up's outbound web-based sales platform. Increased market opporunity by 3x.</p>
+                  <button class="darkButton backButton" type="button" onclick="location.href='tier5.html';">see more</button>
                 </div>
               </div>
         </div>
@@ -103,10 +106,12 @@
                   <div class="projectBack" style="text-align:left">
                     <ul class="titleDown">
                       <li class="liInline companyTitle lightText">WebMD</li>
-                      <li class="liInline"><img id="iconWebMd" class ="icon" alt="iPhone icon" src="myimages/home/iphone-logo-light.png"></li>
+                        <!-- WILL NEED TO ADD THI BACK -->
+                      <!-- <li class="liInline"><img id="iconWebMd" class ="icon" alt="iPhone icon" src="myimages/home/iphone-logo-light.png"></li> -->
                     </ul>
                     <p class="projectDes lightText" style="text-align:left">Designed native app &amp; companion wearable that generates news and information taylored to your own personal biotatistics.</p>
-                    <button class="lightButton backButton" type="button"><a href="webmd.html">see more</a></button>
+                    <button class="lightButton backButton" type="button" onclick="location.href='webmd.html';">see more</button>
+
                   </div>
                 </div>
           </div>
@@ -126,10 +131,13 @@
           <div class="projectBack" style="text-align:left">
             <ul class="titleDown">
               <li class="liInline companyTitle lightText">Beauty Cures</li>
-              <li class="liInline"><img id="iconBeauty" class ="icon" alt="Picture of World" src="myimages/home/iphone-logo-light.png"></li>
+              <!-- WILL NEED TO ADD THI BACK -->
+              <!-- <li class="liInline"><img id="iconBeauty" class ="icon" alt="Picture of World" src="myimages/home/iphone-logo-light.png"></li> -->
             </ul>
-            <p class="projectDes lightText" style="text-align:left">Created &amp; designed "epicurious for your face." This native app offeres recipes and tips that help you to make beauty products right form your fridge.</p>
-            <button class="lightButton backButton" type="button"><a href="beauty.html">see more</a></button>
+            <p class="projectDes lightText" style="text-align:left">Created &amp; designed "Epicurious for your face," native app offering recipes for making beauty products right from your fridge.</p>
+
+            <button class="lightButton backButton" type="button" onclick="location.href='beauty.html';">see more</button>
+
           </div>
         </div>
   </div>
@@ -145,10 +153,14 @@
             <div class="projectBack" style="text-align:left">
               <ul class="titleDown">
                 <li class="liInline companyTitle darkText">Emoji-Libs</li>
-                <li class="liInline"><img id="iconBunny" class ="icon" alt="World icon" src="myimages/home/web-logo-dark.png"></li>
+                  <!-- WILL NEED TO ADD THI BACK -->
+                <!-- <li class="liInline"><img id="iconBunny" class ="icon" alt="World icon" src="myimages/home/web-logo-dark.png"></li> -->
               </ul>
               <p class="projectDes darkText" style="text-align:left">Created, designed, &amp; coded this site to help people to learn how to use emojis as my final project in my front end web development course.</p>
-              <button class="darkButton backButton" type="button"><a href="emoji-libs-port.html">see more</a></button>
+
+              <button class="darkButton backButton" type="button" onclick="location.href='emoji-libs-port.html';">see more</button>
+
+
             </div>
           </div>
         </div>
@@ -157,7 +169,7 @@
 </section>
 
     <div id="buttonDiv">
-      <button  id="devButton" type="button"><a href="../index.html">Dev Portfolio</a></button>
+      <button  id="devButton" type="button" onclick="location.href='../FEWD37/index.html';">Dev Portfolio</button>
     </div>
 
     <footer>
@@ -165,9 +177,9 @@
             <div class="col-xs-12 col-sm-5 col-md-6">
               <!-- class="footerDivs"> -->
               <!-- class="col-xs-12 col-sm-5 col-md-6" -->
-            <a href="mailto:thejessicadavies@gmail.com?subject=Jessica's Portfolio&body=Hi Jessica Loved you Portfolio">thejessicadavies@gmail.com</a>
+            <a href="mailto:thejessicadavies@gmail.com?subject=Portfolio: Jessica Davies &body=Hi Jessica loved your Portfolio!">thejessicadavies@gmail.com</a>
             <a class="footerLogos" href="https://www.linkedin.com/in/jessica-davies-cfa-46009b13"><img class="footerLogos" alt="Linked in Logo" src="myimages/home/linked-in.png"></a>
-            <a class="footerLogos" href="https://github.com/jcdaviesauthor/FEWD37/tree/gh-pages"><img class="footerLogos" alt="Git Hub Logo" src="myimages/home/git.png"></a>
+            <a class="footerLogos" href="https://github.com/jcdaviesauthor"><img class="footerLogos" alt="Git Hub Logo" src="myimages/home/git.png"></a>
             </div>
             <div class="col-xs-12 col-sm-offset-1 col-sm-6 col-md-offset-1 col-md-5 liRight">
               <!-- class="footerDivs liRight" -->
