--- a/tier5.html
+++ b/tier5.html
@@ -41,8 +41,8 @@
                 <!-- <a class="navbar-brand" href="#">Responsive navbar</a> -->
                 <ul id="navUl" class="nav-inline nav navbar-nav">
                   <!-- <div class="row"> -->
-                  <li class="homeBarli nav-item" id= "homeHome"><a href="index.html">Home</a></li>
-                  <li class="homeBarli nav-item" id= "resumeHome"><a href="emoji-nav-about.html">Resume</a></li>
+                  <li class="homeBarli nav-item" id= "homeHome"><a href="index.html">Portfolio</a></li>
+                  <li class="homeBarli nav-item" id= "resumeHome"><a href="https://www.linkedin.com/in/jessica-davies-cfa-46009b13">Resume</a></li>
                   <li class="homeBarli nav-item" id= "aboutHome"><a href="about.html">About</a></li>
                   <!-- </div> -->
                 </ul>
@@ -51,7 +51,7 @@
             <div class="clearFix"></div>
         </header>
                 <!-- <a href="index.html"><img id="jdLogo" alt="Designers Logo" src="myimages/home/jd-logo.png"><a/> -->
-              <img id="jdLogo" alt="Designers Logo" src="myimages/home/jd-logo.png">
+              <a href="index.html"><img id="jdLogo" alt="Designers Logo" src="myimages/home/jd-logo.png"></a>
             </div>
         </div>
 
@@ -850,10 +850,11 @@
                 <div class="col-xs-12 col-sm-5 col-md-6">
                   <!-- class="footerDivs"> -->
                   <!-- class="col-xs-12 col-sm-5 col-md-6" -->
-                <a href="mailto:thejessicadavies@gmail.com?subject=Jessica's Portfolio&body=Hi Jessica Loved you Portfolio">thejessicadavies@gmail.com</a>
+                <a href="mailto:thejessicadavies@gmail.com?subject=Portfolio: Jessica Davies &body=Hi Jessica loved your Portfolio!">thejessicadavies@gmail.com</a>
                 <a class="footerLogos" href="https://www.linkedin.com/in/jessica-davies-cfa-46009b13"><img class="footerLogos" alt="Linked in Logo" src="myimages/home/linked-in.png"></a>
-                <a class="footerLogos" href="https://github.com/jcdaviesauthor/FEWD37/tree/gh-pages"><img class="footerLogos" alt="Git Hub Logo" src="myimages/home/git.png"></a>
+                <a class="footerLogos" href="https://github.com/jcdaviesauthor"><img class="footerLogos" alt="Git Hub Logo" src="myimages/home/git.png"></a>
                 </div>
+
                 <div class="col-xs-12 col-sm-offset-1 col-sm-6 col-md-offset-1 col-md-5 liRight">
                   <!-- class="footerDivs liRight" -->
                   <!-- class="col-xs-12 col-sm-offset-1 col-sm-6 col-md-offset-1 col-md-5 col-lg-offset-1" -->
