fixing footer and formatting for about page

--- a/about.html
+++ b/about.html
@@ -47,6 +47,7 @@
         </header>
           <a href="index.html"><img id="jdLogo" alt="Designers Logo" src="myimages/home/jd-logo.png"></a>
             <!-- <a href="index.html"><img id="jdLogo" alt="Designers Logo" src="myimages/home/jd-logo.png"><a/> -->
+            <!-- header div -->
       </div>
 
   <div id="content">
@@ -69,25 +70,30 @@
 
       <p class="sectionTitle">Jessica Davies</p>
 
-      <p id="jobTitle">Strategist | UX Designer | Heathcare SME</p>
-      <p id="jobLocation">San Francisco, CA &amp; New York, NY </p>
+      <p id="jobTitle">
+        Strategist | UX Designer | Heathcare SME
+      </p>
+      <p id="jobLocation">San Francisco &amp; New York</p>
 
       <div id="contactInfo">
         <ul>
           <li class="deetsLi"><img class="deetsImg" alt="Phone Emoji" src="myimages/about/phone-icon.png"></li>
-          <li class="deetsLi"><a href="tel:+19259688212">(925) 968-8212</a></li>
+          <li class="deetsLi"><a class="anchor" href="tel:+19259688212">(925) 968-8212</a></li>
           <li class="deetsLi"><img class="deetsImg" alt="World Emoji" src="myimages/about/world.png"></li>
-          <li class="deetsLi"><a href="https://jcdaviesauthor.github.io/portfolio/index.html">thejessicadavies.com</a></li>
+          <li class="deetsLi"><a class="anchor" href="https://jcdaviesauthor.github.io/portfolio/index.html">thejessicadavies.com</a></li>
           <li class="deetsLi"><img class="deetsImg" alt="Email Emoji" src="myimages/about/email-emoji.png"></li>
-          <li class="deetsLi"><a id="gmail" href="mailto:thejessicadavies@gmail.com?subject=Portfolio: Jessica Davies &body=Hi Jessica loved your Portfolio!">thejessicadavies@gmail.com</a></li>
-          <li class="deetsLi"><img class="deetsImg" alt="GutHub Octocat" src="myimages/about/github.png"></li>
-          <li class="deetsLi"><a id="gitHubLink" href="https://github.com/jcdaviesauthor">GitHub</a></li>
+          <li class="deetsLi"><a class="anchor" href="mailto:thejessicadavies@gmail.com?subject=Portfolio: Jessica Davies &body=Hi Jessica loved your Portfolio!">thejessicadavies@gmail.com</a></li>
+          <li class="deetsLi"><img class="gitLinked" alt="LinkedIn Logo" src="myimages/about/linkedin-white.png"></li>
+          <li class="deetsLi"><a class="anchor" href="https://www.linkedin.com/in/jessica-davies-cfa-46009b13">LinkedIn</a></li>
+          <li class="deetsLi"><img class="gitLinked" alt="GitHub Octocat" src="myimages/about/git-white.png"></li>
+          <li class="deetsLi"><a class="anchor" href="https://github.com/jcdaviesauthor">GitHub</a></li>
         </ul>
       </div>
     </div>
 
     <div id="approach"><p class="sectionTitle">Approach</p></div>
 
+<!-- content div -->
   </div>
 
 
@@ -97,7 +103,7 @@
             <div class="col-xs-12 col-sm-5 col-md-6">
               <!-- class="footerDivs"> -->
               <!-- class="col-xs-12 col-sm-5 col-md-6" -->
-            <a href="mailto:thejessicadavies@gmail.com?subject=Portfolio: Jessica Davies &body=Hi Jessica loved your Portfolio!">thejessicadavies@gmail.com</a>
+            <a class="footerLogos" href="mailto:thejessicadavies@gmail.com?subject=Portfolio: Jessica Davies &body=Hi Jessica loved your Portfolio!">thejessicadavies@gmail.com</a>
             <a class="footerLogos" href="https://www.linkedin.com/in/jessica-davies-cfa-46009b13"><img class="footerLogos" alt="Linked in Logo" src="myimages/home/linked-in.png"></a>
             <a class="footerLogos" href="https://github.com/jcdaviesauthor"><img class="footerLogos" alt="Git Hub Logo" src="myimages/home/git.png"></a>
             </div>
@@ -109,8 +115,10 @@
             </div>
           </ul>
       </footer>
+      <!-- footer div -->
   </div>
-
+  <!-- wrapper div -->
+</div>
 
   <script src="http://code.jquery.com/jquery-2.2.0.min.js"></script>
 
