--- a/index.html
+++ b/index.html
@@ -159,8 +159,6 @@
               <p class="projectDes darkText" style="text-align:left">Created, designed, &amp; coded this site to help people to learn how to use emojis as my final project in my front end web development course.</p>
 
               <button class="darkButton backButton" type="button" onclick="location.href='emoji-libs-port.html';">see more</button>
-
-
             </div>
           </div>
         </div>
@@ -171,6 +169,9 @@
     <div id="buttonDiv">
       <button  id="devButton" type="button" onclick="location.href='../FEWD37/index.html';">Dev Portfolio</button>
     </div>
+    <!-- content div -->
+      </div>
+<div class="footer">
 
     <footer>
           <ul id="footerUl" class="row">
@@ -188,10 +189,15 @@
             </div>
           </ul>
     </footer>
-      <script src="home.js"></script>
+    <!-- footer -->
+  </div>
+    
         <!-- wrapper end tag -->
   </div>
 
+
+
+  <script src="home.js"></script>
 <script src="http://code.jquery.com/jquery-2.2.0.min.js"></script>
 
   <!-- BOOTSTRAP-Latest compiled and minified JavaScript -->
