--- a/tier5.html
+++ b/tier5.html
@@ -53,6 +53,7 @@
                 <!-- <a href="index.html"><img id="jdLogo" alt="Designers Logo" src="myimages/home/jd-logo.png"><a/> -->
               <a href="index.html"><img id="jdLogo" alt="Designers Logo" src="myimages/home/jd-logo.png"></a>
             </div>
+            <!-- header class div -->
         </div>
 
       <div id="content">
@@ -472,8 +473,8 @@
       <p class="heavyText">95% of individuals were willing to give some feedback to improve the accuracy of Tier5&#39;s contact information</p>
     </div> -->
   </div>
-</div>
-</div>
+
+
 
 <div><p class="statement">In-depth interview insights</p></div>
 
@@ -612,57 +613,54 @@
 
   <div class="personas row">
 
-<div class="personaAjayBrad col-md-6">
+<div class="personaAjayBrad col-md-12 col-lg-6">
 
     <p class="personaTypes"> High Volume, Low Touch</p>
 
     <!-- <div class="squares"> -->
       <div class="squaresPersonas">
 
-      <div class="squaresTop row">
+      <div class="row">
         <img class="ajay" alt="Picture of a Man" src="myimages/tier5/synthesis/ajay.png">
-        <div class="textBoxName ajayName">
-          <p class="SalesmanName">Ajay</p>
+        <div class="textBoxName ajayName padding">
+          <p class="SalesmanName boxTitles">Ajay</p>
           <p>Age: 26</p>
           <p>Location: New York City, NY</p>
           <p>Marital Status: Single</p>
           <p>Occupation: Sales Hacker</p>
         </div>
-        <div class="textBoxQuote textBoxQuoteAjay">
-          <p>&#34;I need leads by the bucketful, not the handful&#34;
+        <div class="textBoxQuote textBoxQuoteAjay padding">
+          <p class="quoteP">&#34;I need leads by the bucketful, not the handful&#34;
         </div>
       </div>
 
-      <div class="squaresBottom row">
+      <div class="row">
 
-        <div class="textBoxGoals">
+        <div class="textBoxGoals padding">
           <p class="boxTitles">Goals</p>
-          <ul>
-            <li>Save time </li>
-            <li>Meet agressive sales targets</li>
-            <li>Get commission</li>
-          </ul>
+            <p>- Save time </p>
+            <p>- Meet agressive sales targets</p>
+            <p>- Get commission</p>
+
         </div>
 
-        <div class="textBoxFrustrations">
+        <div class="textBoxFrustrations padding">
           <p class="boxTitles">Frustrations</p>
-          <ul>
-            <li>50% of day spent prospecting</li>
-            <li>Relies on email marketing,
-            only 5% response rate</li>
-            <li>Uses overseas fact checkers, slow process</li>
-          </ul>
+
+            <p>- 50% of day spent prospecting</p>
+            <p>- Relies on email marketing,
+            only 5% response rate</p>
+            <p>- Overseas fact checkers slow</p>
+
         </div>
 
-        <div class="textBoxTech">
+        <div class="textBoxTech padding">
           <p class="boxTitles">Technology</p>
-          <ul>
-            <li>Infusionsoft</li>
-            <li>Datanyze</li>
-            <li>ZoomInfo</li>
-            <li>Hoovers</li>
-            <li>LinkedIn</li>
-          </ul>
+            <p>- Infusionsoft</p>
+            <p>- Datanyze</p>
+            <p>- ZoomInfo</p>
+            <p>- Hoovers</p>
+            <p>- LinkedIn</p>
         </div>
         <!-- squarebottom -->
     </div>
@@ -672,55 +670,55 @@
     </div>
   <!-- </div> -->
 
-    <div class="personaAjayBrad col-md-6">
+    <div class="personaAjayBrad col-md-12 col-lg-6">
 
   <p class="personaTypes"> High Touch, Low Volume</p>
   <div class="squaresPersonas">
 
-      <div class="squaresTop row">
+      <div class="row">
       <img class="brad" alt="Picture of a Man" src="myimages/tier5/synthesis/brad.png">
-      <div class="textBoxName textBoxNameBrad">
-        <p class="SalesmanName">Brad</p>
+      <div class="textBoxName textBoxNameBrad padding">
+        <p class="SalesmanName boxTitles">Brad</p>
         <p>Age: 52</p>
         <p>Location: San Francisco, CA</p>
         <p>Marital Status: Married</p>
         <p>Occupation: VP of Sales</p>
       </div>
-      <div class="textBoxQuote textBoxQuoteBrad">
-        <p>&#34;There is no good way to keep apprised of news on your leads.&#34;
+      <div class="textBoxQuote textBoxQuoteBrad padding">
+        <p class="quoteP">&#34;There is no good way to keep apprised of news on your leads.&#34;
       </div>
     </div>
 
-      <div class="squaresBottom row">
+      <div class="row">
 
-      <div class="textBoxGoals">
+      <div class="textBoxGoals padding">
         <p class="boxTitles">Goals</p>
-        <ul>
-          <li>Nurture client relationships</li>
-          <li>Stay &#34;top of mind&#34;</li>
-          <li>Meet sales targets,
-          up-sell</li>
-        </ul>
+
+          <p>- Nurture client relationships</p>
+          <p>- Stay &#34;top of mind&#34;</p>
+          <p>- Meet sales targets</p>
+          <p>- Upsell clients</p>
+
       </div>
 
-      <div class="textBoxFrustrations">
+      <div class="textBoxFrustrations padding">
         <p class="boxTitles">Frustrations</p>
-        <ul>
-          <li>Limited bandwidth</li>
-          <li>Long time to execute sale</li>
-          <li>3 to 5+ tools required to find lead info</li>
-        </ul>
+
+          <p>- Limited bandwidth</p>
+          <p>- Long time to execute sale</p>
+          <p>- 3 to 5+ tools required to find lead info<pi>
+
       </div>
 
-      <div class="textBoxTech">
+      <div class="textBoxTech padding">
         <p class="boxTitles">Technology</p>
-        <ul>
-          <li>Salesforce</li>
-          <li>InsideView</li>
-          <li>data.com</li>
-          <li>Google alerts</li>
-          <li>LinkedIn</li>
-        </ul>
+
+          <p>- Salesforce</p>
+          <p>- InsideView</p>
+          <p>- data.com</p>
+          <p>- LinkedIn</p>
+          <p>- Google</p>
+
       </div>
 
     </div>
@@ -841,7 +839,7 @@
 
 <div class="processSectionTitle">Build &amp Deliver</div>
 
-      <!-- THE CONTENT DIV   -->
+<!-- content div -->
       </div>
 
       <div id="footer">
@@ -864,9 +862,10 @@
         </footer>
       </div>
 
+<!-- the wrapper -->
     </div>
 
-      <script src="http://code.jquery.com/jquery-2.2.0.min.js"></script>
+    <script src="http://code.jquery.com/jquery-2.2.0.min.js"></script>
 
     <!-- BOOTSTRAP-Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
