--- a/webmd.html
+++ b/webmd.html
@@ -13,21 +13,79 @@
     <link  rel="stylesheet" href="nav.css" media="screen" charset="utf-8">
     <link  rel="stylesheet" href="footer.css" media="screen" charset="utf-8">
     <link  rel="stylesheet" href="project.css" media="screen" charset="utf-8">
+      <link  rel="stylesheet" href="temp-file.css" media="screen" charset="utf-8">
     <link  rel="stylesheet" href="webmd.css" media="screen" charset="utf-8">
   </head>
-  <body>
-    <h2 class="statement"> Welcome to the future home of a novel <br>WebMd app &amp wearable</br></h2>
+<body>
+<div id='wrapper'>
+  <div id="header">
+      <header>
+        <!-- navbar-default is an add in to change color -->
+        <nav class="navbar navbar-default"  role="navigation">
+            <div class="container">
+                <div class="navbar-header">
+                  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </buttn>
+              </div>
+            </div>
 
-<div class="comingSoon">
-    <p class="charcol des"> Coding your design portfolio from scratch is soooo cool, oh yeah!</p>
-    <p  class="charcol des"> But can be really $%#&amp slow going, am I right?</p>
-    <p class="charcol des"> This project is coming soon! But in the mean time please enjoy ... cat burrito!</p>
+          <!-- <nav id = "navHome" class="navbar navbar-light bg-faded"> -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+              <!-- <a class="navbar-brand" href="#">Responsive navbar</a> -->
+              <ul id="navUl" class="nav-inline nav navbar-nav">
+                <!-- <div class="row"> -->
+                <li class="homeBarli nav-item" id= "homeHome"><a href="index.html">Portfolio</a></li>
+                <li class="homeBarli nav-item" id= "resumeHome"><a href="https://www.linkedin.com/in/jessica-davies-cfa-46009b13">Resume</a></li>
+                <li class="homeBarli nav-item" id= "aboutHome"><a href="about.html">About</a></li>
+                <!-- </div> -->
+              </ul>
+            </div>
+        </nav>
+          <div class="clearFix"></div>
+      </header>
+        <a href="index.html"><img id="jdLogo" alt="Designers Logo" src="myimages/home/jd-logo.png"></a>
+          <!-- <a href="index.html"><img id="jdLogo" alt="Designers Logo" src="myimages/home/jd-logo.png"><a/> -->
+          <!-- header div -->
+    </div>
+
+<div id="content">
+    <h2 class="octoGreen changeBack"> Welcome to the future home of a novel <br>WebMd app &amp companion wearable</br></h2>
+
+    <div class="comingSoon">
+        <p class="charcol des"> Coding your design portfolio from scratch is soooo cool, oh yeah!</p>
+        <p  class="charcol des"> But can be really $%#&amp slow going, am I right?</p>
+        <p class="charcol des"> This project is coming soon! But in the mean time please enjoy... cat burrito!</p>
+    </div>
+
+    <img id="catburrito" alt="cat burrito" src="myimages/cat-burrito.jpg">
+      <a href="https://c1.staticflickr.com/3/2389/2073509907_345ad52bc1.jpg">Source</a>
 </div>
 
-<img id="catburrito" alt="cat burrito" src="myimages/cat-burrito.jpg">
-
-    <a href="https://c1.staticflickr.com/3/2389/2073509907_345ad52bc1.jpg">Source</a>
-
+<div id="footer">
+  <footer>
+        <ul id="footerUl" class="row">
+          <div class="col-xs-12 col-sm-5 col-md-6">
+            <!-- class="footerDivs"> -->
+            <!-- class="col-xs-12 col-sm-5 col-md-6" -->
+          <a href="mailto:thejessicadavies@gmail.com?subject=Portfolio: Jessica Davies &body=Hi Jessica loved your Portfolio!">thejessicadavies@gmail.com</a>
+          <a class="footerLogos" href="https://www.linkedin.com/in/jessica-davies-cfa-46009b13"><img class="footerLogos" alt="Linked in Logo" src="myimages/home/linked-in.png"></a>
+          <a class="footerLogos" href="https://github.com/jcdaviesauthor"><img class="footerLogos" alt="Git Hub Logo" src="myimages/home/git.png"></a>
+          </div>
+          <div class="col-xs-12 col-sm-offset-1 col-sm-6 col-md-offset-1 col-md-5 liRight">
+            <!-- class="footerDivs liRight" -->
+            <!-- class="col-xs-12 col-sm-offset-1 col-sm-6 col-md-offset-1 col-md-5 col-lg-offset-1" -->
+          <div >Web design, content, and code&nbsp;<img id="crImg"alt="Copyright Symbol" src="myimages/home/copyright.png">&nbsp;2016 Jessica Davies.</div>
+          </div>
+        </ul>
+  </footer>
+    <!-- footer div -->
+</div>
+<!-- wrapper div -->
+</div>
 
       <script src="http://code.jquery.com/jquery-2.2.0.min.js"></script>
 
