fixing circles at top

--- a/tier5.html
+++ b/tier5.html
@@ -86,15 +86,15 @@
         <div class="ourProcess row">
             <p class="ourProcessTitle">Our Process</p>
             <div class="processCircleDiv">
-              <div class="processCircle process stratDesCircle"><a href="#strategySection"><p class="circleText">Strategy</p></a></div>
+              <div class="processCircle process twoLine"><a href="#strategySection"><p class="circleText">Business Strategy</p></a></div>
               <img class="process arrow" alt="arrow" src="myimages/tier5/introduction/arrow-orange.png">
-              <div class="processCircle process researchCircle"><a href="#researchSection"><p class="circleText">Research &amp; Discovery</p></a></div>
+              <div class="processCircle process twoLine"><a href="#researchSection"><p class="circleText">Research &amp; Discovery</p></a></div>
               <img class="process arrow" alt="arrow" src="myimages/tier5/introduction/arrow-orange.png">
-              <div class="processCircle process stratDesCircle"><a href="#synthesisSection"><p class="circleText">Synthesis</p></a></div>
+              <div class="processCircle process oneLine"><a href="#synthesisSection"><p class="circleText">Synthesis</p></a></div>
               <img class="process arrow" alt="arrow" src="myimages/tier5/introduction/arrow-orange.png">
-              <div class="processCircle process stratDesCircle"><a href="#designSection"><p class="circleText">Design</p></a></div>
+              <div class="processCircle process oneLine"><a href="#designSection"><p class="circleText">Design</p></a></div>
               <img class="process arrow" alt="arrow" src="myimages/tier5/introduction/arrow-orange.png">
-              <div class="processCircle process buildCircle"><a href="buildSection"><p class="circleText">Build &amp;<br> Deliver</br></p></a></div>
+              <div class="processCircle process twoLine"><a href="buildSection"><p class="circleText">Build &amp;<br> Deliver</br></p></a></div>
             </div>
         </div>
 
