trying to fix process circles

--- a/tier5.html
+++ b/tier5.html
@@ -94,7 +94,8 @@
               <img class="process arrow" alt="arrow" src="myimages/tier5/introduction/arrow-orange.png">
               <div class="processCircle process oneLine"><a href="#designSection"><p class="circleText">Design</p></a></div>
               <img class="process arrow" alt="arrow" src="myimages/tier5/introduction/arrow-orange.png">
-              <div class="processCircle process twoLine"><a href="buildSection"><p class="circleText">Build &amp;<br> Deliver</br></p></a></div>
+              <div class="processCircle process twoLine"><a href="buildSection">
+              <p class="circleText build">Build &amp;<br>Deliver</br></p></a></div>
             </div>
         </div>
 
