--- a/tier5.html
+++ b/tier5.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:og="http://ogp.me/ns#" xmlns:fb="http://www.facebook.com/2008/fbml">
   <head>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,400italic' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Lora:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
@@ -15,7 +15,7 @@
     <link  rel="stylesheet" href="footer.css" media="screen" charset="utf-8">
     <link  rel="stylesheet" href="project.css" media="screen" charset="utf-8">
     <link  rel="stylesheet" href="tier5.css" media="screen" charset="utf-8">
-
+    <meta property="og:image" content="myimages/home/homepage"/>
   </head>
   <body>
       <div id='wrapper'>
@@ -172,8 +172,8 @@
     </div>
 
       <div><p class="statement statmentOrange">Focus on competing only with lead/data generators.</p></div>
-
-    <table class="compTable">
+<div class="table-responsive">
+    <table class="compTable table">
       <tr>
         <th></th>
         <th><img class="tierTableLogo competitorTableLogos" alt="Tier 5 Logo" src="myimages/tier5/strategy/tier5-logo-normal.png"></th>
@@ -313,6 +313,7 @@
         </td>
       </tr>
     </table>
+  </div>
 
       <div><p class="statement">Opportunities to improve on the competition.</p></div>
       <div class="features">
@@ -840,8 +841,20 @@
 
 <div class="processSectionTitle">Build &amp Deliver</div>
 
+<div class="portArrowBottomSec processSectionTitleUpNext">
+  <div class="col-xs-12 col-sm-4 col-md-5 col-lg-6 ">Up Next</div>
+  <!-- col-sm-5 -->
+  <div class="col-xs-12 col-sm-8 col-md-offset-1 col-md-6 col-lg-offset-1 col-lg-5">
+    <!-- col-sm-offset-1 col-sm-6  -->
+    <a href="webmd.html">
+      <p class="nextPort arrowAndText">WebMD Mobile App with Companion Wearable</p>
+      <img class="arrowPort arrowAndText" alt="Connect Icon" src="myimages/arrow-port.png">
+    </a>
+  </div>
+</div>
+
 <!-- content div -->
-      </div>
+</div>
 
       <div id="footer">
         <footer>
@@ -849,7 +862,7 @@
                 <div class="col-xs-12 col-sm-5 col-md-6">
                   <!-- class="footerDivs"> -->
                   <!-- class="col-xs-12 col-sm-5 col-md-6" -->
-                <a href="mailto:thejessicadavies@gmail.com?subject=Portfolio: Jessica Davies &body=Hi Jessica loved your Portfolio!">thejessicadavies@gmail.com</a>
+                <a class="footerLogos" href="mailto:thejessicadavies@gmail.com?subject=Portfolio: Jessica Davies &body=Hi Jessica loved your Portfolio!">thejessicadavies@gmail.com</a>
                 <a class="footerLogos" href="https://www.linkedin.com/in/jessica-davies-cfa-46009b13"><img class="footerLogos" alt="Linked in Logo" src="myimages/home/linked-in.png"></a>
                 <a class="footerLogos" href="https://github.com/jcdaviesauthor"><img class="footerLogos" alt="Git Hub Logo" src="myimages/home/git.png"></a>
                 </div>
@@ -862,6 +875,7 @@
               </ul>
         </footer>
       </div>
+          <!-- footer div -->
 
 <!-- the wrapper -->
     </div>
