--- a/tier5.html
+++ b/tier5.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:og="http://ogp.me/ns#" xmlns:fb="http://www.facebook.com/2008/fbml">
+
   <head>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,400italic' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Lora:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
@@ -7,7 +8,7 @@
         <!-- BOOTSTRAP-Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
 
     <title>Jessica Davies UX Design Project 1: Tier 5 </title>
     <link  rel="stylesheet" href="all-files.css" media="screen" charset="utf-8">
@@ -15,7 +16,9 @@
     <link  rel="stylesheet" href="footer.css" media="screen" charset="utf-8">
     <link  rel="stylesheet" href="project.css" media="screen" charset="utf-8">
     <link  rel="stylesheet" href="tier5.css" media="screen" charset="utf-8">
-    <meta property="og:image" content="myimages/home/homepage"/>
+
+    <meta property="og:image" content="http://i68.tinypic.com/2wcib0w.png"/>
+
   </head>
   <body>
       <div id='wrapper'>
