adding description meta tags

--- a/tier5.html
+++ b/tier5.html
@@ -18,7 +18,8 @@
     <link  rel="stylesheet" href="tier5.css" media="screen" charset="utf-8">
 
     <meta property="og:image" content="http://i68.tinypic.com/2wcib0w.png"/>
-
+    <meta property="og:title" content="This will be the title displayed!" />
+    <meta property="og:description" content="This will be the description that shows below the title!" />
   </head>
   <body>
       <div id='wrapper'>
